[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ScoreCounter.gd" type="Script" id=1]
[ext_resource path="res://themes/fonts/DejaVuSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sounds/crowd_cheer.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -39.0
margin_right = 39.0
margin_bottom = 53.0
custom_constants/separation = 16
alignment = 1

[node name="Score1" type="Label" parent="HBoxContainer"]
margin_right = 31.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="Score2" type="Label" parent="HBoxContainer"]
margin_left = 47.0
margin_right = 78.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="CrowdCheer" type="AudioStreamPlayer" parent="HBoxContainer"]
stream = ExtResource( 4 )
